metodo de pegar todos os usuarios implementado e documentado, validacao dos campos de entrada de dados adicionada
