# BackEnd/src/modules/users/handlers/createUserHandler.js
@@ -1,5 +1,6 @@
 import { UsersInMemoryRepository } from "../repositories/in-memory/UsersInMemoryRepository.js"
 import { UsersPostgresRepository } from "../repositories/postgres/UsersPostgresRepository.js"
+import bcrypt from "bcrypt"
 
 export async function createUserHandler(request, response) {
   const { firstname, lastname, email, password } = request.body
@@ -7,7 +8,14 @@ export async function createUserHandler(request, response) {
   const repository = 
     await UsersInMemoryRepository.getInstance()
 
-  const createdUser = await repository.create({ firstname, lastname, email, password })
+  const hashedPassword = bcrypt.hashSync(password, 10)
+
+  const createdUser = await repository.create({ 
+    firstname, 
+    lastname, 
+    email, 
+    password: hashedPassword 
+  })
 
   return response.status(201).send({
     id: createdUser.id,
