# BackEnd/swagger.json
@@ -119,6 +119,51 @@
             }
           }
         }
+      },
+      "get": {
+        "tags": [
+          "Usuários"
+        ],
+        "description": "Retorna todos os usuários existentes",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "string"
+                      },
+                      "firstname": {
+                        "type": "string"
+                      },
+                      "lastname": {
+                        "type": "string"
+                      },
+                      "email": {
+                        "type": "string"
+                      },
+                      "created_at": {
+                        "type": "string"
+                      }
+                    },
+                    "example": {
+                      "id": "649a60be-dade-4559-a57f-3dc7e142bcae",
+                      "firstname": "Ada",
+                      "lastname": "Lovelace",
+                      "email": "adalace@email.com",
+                      "created_at": "2022-03-29T18:42:00.906Z"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/users/:id": {
@@ -245,7 +290,93 @@
           {
             "name": "id",
             "in": "path",
-            "description": "ID do usuário a ser buscado",
+            "description": "ID do usuário a ser deletado",
+            "required": true
+          }
+        ]
+      },
+      "patch": {
+        "tags": [
+          "Usuários"
+        ],
+        "description": "Atualiza um usuário de acordo com o id passado",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string"
+                    },
+                    "firstname": {
+                      "type": "string"
+                    },
+                    "lastname": {
+                      "type": "string"
+                    },
+                    "email": {
+                      "type": "string"
+                    },
+                    "created_at": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "id": "649a60be-dade-4559-a57f-3dc7e142bcae",
+                    "firstname": "Ada",
+                    "lastname": "Wong",
+                    "email": "adalace@email.com",
+                    "created_at": "2022-03-29T18:42:00.906Z"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "message": "Usuário não encontrado"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "message": "Desculpe, algo de errado não está certo em nosso serviço. Por favor, tente novamente"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID do usuário a ser atualizado",
             "required": true
           }
         ]
